--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ margin-left: 40px;
 background: #444349 url("../img/bg.png") no-repeat;
 width: 1880px;
 min-height: 1080px;
+box-shadow: -1px 0px 4px #2c2c30;
 }
 
 h2 {
@@ -40,6 +41,7 @@ min-height: 150px;
 background-color: #ffffff;
 margin-top: 40px;
 margin-left: 40px;
+box-shadow: 4px 4px 3px #2c2c30;
 }
 
 .first-block p {
@@ -55,6 +57,7 @@ min-height: 180px;
 background-color: #ffffff;
 margin-top: 40px;
 margin-left: 40px;
+box-shadow: 4px 4px 3px #2c2c30;
 }
 
 .inputs {
@@ -69,4 +72,19 @@ border: none;
 border-bottom: 2px solid black;
 margin-left: 40px;
 margin-bottom: 5px;
+}
+
+.second-block input:nth-last-child(1) {
+margin-bottom: 30px;
+}
+
+.icon::after {
+content: "";
+position: absolute;
+display: block;
+width: 15px;
+height: 15px;
+position: absolute;
+background: url("../img/pr.png") no-repeat;
+left: 320px;
 }
